<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.login.Quiz">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lets"
        style="@style/TitleTextStyle"

        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Question1"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="22dp"
        android:textColor="#991160"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qb"
        style="@style/QuestionTitleTextStyle"
       />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question_1"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/button1a"
            android:text="@string/imports"
            style="@style/RadioAnswer" />
        <RadioButton
            android:id="@+id/button1b"
            android:text="@string/regional"
            style="@style/RadioAnswer" />
        <RadioButton
            android:id="@+id/button1c"
            android:text="@string/national"
            style="@style/RadioAnswer" />
        <RadioButton
            android:id="@+id/button1d"
            android:text="@string/international"
            style="@style/RadioAnswer" />
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Question_2"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="22dp"
        android:textColor="#991160"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/QuestionTitleTextStyle"
        android:text="@string/qb2" />

    <RadioGroup
        android:id="@+id/question_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/button_2a"
            android:text="@string/button_2a"
            style="@style/RadioAnswer"/>

        <RadioButton
            android:id="@+id/button_2b"
            android:text="@string/button_2b"
            style="@style/RadioAnswer"/>

        <RadioButton
            android:id="@+id/button_2c"
            android:text="@string/button_2c"
            style="@style/RadioAnswer"/>

        <RadioButton
            android:id="@+id/button_2d"
            android:text="@string/button_2d"
            style="@style/RadioAnswer"/>
    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="22dp"
        android:textColor="#991160"
        android:text="@string/Question_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/QuestionTitleTextStyle"
        android:text="@string/qb3" />

    <RadioGroup
        android:id="@+id/question_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/button_3a"
            android:text="@string/button_3a"
            style="@style/RadioAnswer"/>
        <RadioButton
            android:id="@+id/button_3b"
            android:text="@string/button_3b"
            style="@style/RadioAnswer" />

        <RadioButton
            android:id="@+id/button_3c"
            android:text="@string/button_3c"
            style="@style/RadioAnswer" />

        <RadioButton
            android:id="@+id/button_3d"
            android:text="@string/button_3d"
            style="@style/RadioAnswer"
            />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="22dp"
        android:textColor="#991160"
        android:id="@+id/question_4"
        android:text="@string/Question_4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/QuestionTitleTextStyle"
        android:text="@string/qb4" />

    <CheckBox
        android:id="@+id/button_4a"
        android:text="@string/button_4a"
        style="@style/RadioAnswer"
         />

    <CheckBox
        android:id="@+id/button_4b"
        android:text="@string/button_4b"
        style="@style/RadioAnswer"/>

    <CheckBox
        android:id="@+id/button_4c"
        android:text="@string/button_4c"
        style="@style/RadioAnswer"/>

    <CheckBox
        android:id="@+id/button_4d"
        android:text="@string/button_4d"
        style="@style/RadioAnswer"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="22dp"
        android:textColor="#991160"
        android:text="@string/Question_3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/QuestionTitleTextStyle"
        android:text="@string/qb3" />

    <RadioGroup
        android:id="@+id/question_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/button_5a"
            android:text="@string/button_5a"
            style="@style/RadioAnswer"/>
        <RadioButton
            android:id="@+id/button_5b"
            android:text="@string/button_5b"
            style="@style/RadioAnswer" />

        <RadioButton
            android:id="@+id/button_5c"
            android:text="@string/button_5c"
            style="@style/RadioAnswer" />

        <RadioButton
            android:id="@+id/button_5d"
            android:text="@string/button_5d"
            style="@style/RadioAnswer"
            />

    </RadioGroup>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="26dp"
        android:onClick="submitOrder"
        android:id="@+id/submit"/>





</LinearLayout>
</ScrollView>